fix: grid-gap -> gap

--- a/style.css
+++ b/style.css
@@ -585,7 +585,7 @@ body {
   padding: 0;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 20px;
+  gap: 20px;
   padding-top: 18px;
 
   /* Оформление */
@@ -670,7 +670,7 @@ body {
   display: grid;
   grid-template-columns: repeat(4, 32px);
   grid-template-rows: 32px;
-  grid-gap: 8px;
+  gap: 8px;
 
   /* Оформление */
   list-style: none;
@@ -757,9 +757,8 @@ body {
   /* Блочная модель */
   padding-top: 33px;
   display: grid;
-  grid-gap: 20px;
+  gap: 20px;
   grid-template-columns: 2fr 1fr;
-  
 }
 
 .form {
